--- a/code/index.html
+++ b/code/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We.love.DIY</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/f193f020cd.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
     </head>
@@ -19,17 +21,17 @@
       <div class="name">
         <a href="index.html">We.Love.DIY</a>
         </div>
-      <div class="menu">
-        <li class="menu-item"><a href="index.html">Home</a></li>
-        <li class="menu-item"><a href="index.html">Inspiration</a></li> 
-        <li class="menu-item"><a href="index.html">Contact</a></li>
-        <li class="menu-item"><a href="index.html">About</a></li>
-      </div>
+      <ol class="menu">
+        <li class="menu-item"><a href="index.html/home">Home</a></li>
+        <li class="menu-item"><a href="index.html/Inspiration">Inspiration</a></li> 
+        <li class="menu-item"><a href="index.html/Contact">Contact</a></li>
+        <li class="menu-item"><a href="index.html/About">About</a></li>
+      </ol>
       <form class="search-field">
-        <input class="search-input" type="text" placeholder="Search..."></input>
+        <label for="search">Search</label>
+        <input class="search-input" name="search" type="search" placeholder="Search...">
         <button class="search-button" type="submit"><i class="fas fa-search"></i></button>
       </form>
-      </div>
     </header>
 
 
@@ -46,12 +48,12 @@
           But how do you make one on your own on a budget? 
           Get free instructions and tips on how to build it yourself
           and enjoy your time ourdoors.</p>
-          <h class="hidden-paragraph"> 
-            xxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxx xxxxxxxxx
-            xxxx xxxxxxxxx xxxxx xxxx xxxxxxx
-            xxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxx xxxxx xxx xxxxxxx xxxx
-            xxxx xxxxxxxxx xxxxx</h>
-          <button class="desktop-button"><a href="index.html">Download instructions in pdf</a></button>
+          <p class="hidden-paragraph"> 
+             Eiusmod cillum adipisicing excepteur consequat laborum consectetur laboris. 
+             Consectetur non sunt nulla ad quis nulla cillum amet ad deserunt nisi minim est. 
+             Exercitation tempor ut irure minim tempor Lorem velit. In consectetur in duis quis. 
+             Consequat qui tempor voluptate exercitation qui eiusmod dolor et do ullamco cillum.</p>
+            <a href="index.html"><button class="desktop-button">Download instructions in pdf</button></a>
         </div>
       </div>
     </section>
@@ -62,51 +64,51 @@
     <section class="small-news-grid">
       <div class="small-item">
         <img class="small-images" src="images/custom-closets.jpg" alt="custom-closets">
-        <h5><a href="index.html">Custom closets</a></h5>
-        <p>xxxxx xx xxx xxxxx</p>
+        <h3><a href="index.html">Custom closets</a></h3>
+        <p>Cupidatat mollit exercitation..</p>
       </div>
       <div class="small-item">
         <img class="small-images" src="images/built-in-bookcase.jpg" alt="built-in-bookcase">
-        <h5><a href="index.html">Built-in bookshelf</a></h5>
-        <p>xxxxx xx xxx xxxxx</p>
+        <h4><a href="index.html">Built-in bookshelf</a></h4>
+        <p>Deserunt anim culpa ullamco ipsum est..</p>
       </div>
       <div class="small-item">
           <img class="small-images" src="images/kitchen-countertop.jpg" alt="kitchen-countertop">
-          <h5><a href="index.html">Kitchen countertop makeover</a></h5>
-          <p>xxxxx xx xxx xxxxx</p>
+          <h4><a href="index.html">Kitchen countertop makeover</a></h4>
+          <p>Ex veniam nulla minim pariatur..</p>
       </div>
       <div class="small-item">
           <img class="small-images" src="images/panel-headboard.JPG" alt="panel-headbord">
-          <h5><a href="index.html">Panel headboard</a></h5>
-          <p>xxxxx xx xxx xxxxx</p>
+          <h4><a href="index.html">Panel headboard</a></h4>
+          <p>Cupidatat mollit exercitation..</p>
       </div>
       <div class="small-item">
-          <img class="small-images" src="images/desk-chair.JPG"alt="desk-chair">
-          <h5><a href="index.html">Desk chair makeover</a></h5>
-          <p>xxxxx xx xxx xxxxx</p>
+          <img class="small-images" src="images/desk-chair.JPG" alt="desk-chair">
+          <h4><a href="index.html">Desk chair makeover</a></h4>
+          <p>Deserunt anim culpa ullamco ipsum est..</p>
       </div>
       <div class="small-item">
         <img class="small-images" src="images/ikea-dresser.JPG" alt="ikea-dresser">
-        <h5><a href="index.html">Ikea dresser hacks</a></h5>
-        <p>xxxxx xx xxx xxxxx</p>
+        <h4><a href="index.html">Ikea dresser hacks</a></h4>
+        <p>Reprehenderit excepteur Lorem..</p>
       </div>
       <div class="small-item">
         <img class="small-images" src="images/kids-playroom.jpg" alt="kids-playroom">
-        <h5><a href="index.html">Kids playroom hack</a></h5>
-        <p>xxxxx xx xxx xxxxx</p>
+        <h4><a href="index.html">Kids playroom hack</a></h4>
+        <p>Ex veniam nulla minim pariatur..</p>
       </div>
       <div class="small-item">
         <img class="small-images" src="images/diy-tools.jpg" alt="diy-tools">
-        <h5><a href="index.html">DIY tools to have at home</a></h5>
-        <p>xxxxx xx xxx xxxxx</p>
+        <h4><a href="index.html">DIY tools to have at home</a></h4>
+        <p>Reprehenderit excepteur Lorem occaecat..</p>
       </div>
     </section>
 
 <footer>
   <div class="logo">We.love.diy</div>
   <div class="social">
-  <a href=#facebook><i class="fa-brands fa-square-facebook"></i></a>
-  <a href=#instagram><i class="fa-brands fa-instagram"></i></a>
+  <a href="#facebook"><i class="fa-brands fa-square-facebook"></i></a>
+  <a href="#instagram"><i class="fa-brands fa-instagram"></i></a>
   </div>
   <div class="email-info">info@welovediy.com</div>
   <div class="newsletter"><a href=#newsletter>Sign up for our newsletter</a></div>
