--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,7 @@
       <form class="search-field">
         <label for="search">Search</label>
         <input class="search-input" name="search" type="search" placeholder="Search...">
-        <button class="search-button" type="submit"><i class="fas fa-search"></i></button>
+        <button class="search-button" type="submit" name="search"><i class="fas fa-search"></i></button>
       </form>
     </header>
 
@@ -107,11 +107,11 @@
 <footer>
   <div class="logo">We.love.diy</div>
   <div class="social">
-  <a href="#facebook"><i class="fa-brands fa-square-facebook"></i></a>
-  <a href="#instagram"><i class="fa-brands fa-instagram"></i></a>
+  <a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook"></i></a>
+  <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
   </div>
   <div class="email-info">info@welovediy.com</div>
-  <div class="newsletter"><a href=#newsletter>Sign up for our newsletter</a></div>
+  <div class="newsletter">Sign up for our newsletter</div>
 </footer>
 
 </body>
