--- a/code/index.html
+++ b/code/index.html
@@ -50,9 +50,7 @@
           and enjoy your time ourdoors.</p>
           <p class="hidden-paragraph"> 
              Eiusmod cillum adipisicing excepteur consequat laborum consectetur laboris. 
-             Consectetur non sunt nulla ad quis nulla cillum amet ad deserunt nisi minim est. 
-             Exercitation tempor ut irure minim tempor Lorem velit. In consectetur in duis quis. 
-             Consequat qui tempor voluptate exercitation qui eiusmod dolor et do ullamco cillum.</p>
+             Consectetur non sunt nulla ad quis nulla cillum amet ad deserunt nisi minim est.</p>
             <a href="index.html"><button class="desktop-button">Download instructions in pdf</button></a>
         </div>
       </div>
@@ -64,7 +62,7 @@
     <section class="small-news-grid">
       <div class="small-item">
         <img class="small-images" src="images/custom-closets.jpg" alt="custom-closets">
-        <h3><a href="index.html">Custom closets</a></h3>
+        <h4><a href="index.html">Custom closets</a></h4>
         <p>Cupidatat mollit exercitation..</p>
       </div>
       <div class="small-item">
