--- a/code/index.html
+++ b/code/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>We.love.DIY</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/f193f020cd.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
+    <title>We.love.DIY</title>
     </head>
   <body>
 
@@ -22,10 +22,10 @@
         <a href="index.html">We.Love.DIY</a>
         </div>
       <ol class="menu">
-        <li class="menu-item"><a href="index.html/home">Home</a></li>
-        <li class="menu-item"><a href="index.html/Inspiration">Inspiration</a></li> 
-        <li class="menu-item"><a href="index.html/Contact">Contact</a></li>
-        <li class="menu-item"><a href="index.html/About">About</a></li>
+        <li class="menu-item"><a href="index.html">Home</a></li>
+        <li class="menu-item"><a href="inspiration.html">Inspiration</a></li> 
+        <li class="menu-item"><a href="contact.html">Contact</a></li>
+        <li class="menu-item"><a href="about.html">About</a></li>
       </ol>
       <form class="search-field">
         <label for="search">Search</label>
