--- a/code/about.html
+++ b/code/about.html
@@ -8,6 +8,8 @@
     <script src="https://kit.fontawesome.com/f193f020cd.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
     <title>WeLoveDiy - About</title>
+
+    <!---ABOUT THE COMPANY PAGE --> 
 </head>
 <body>
     <header>
@@ -30,6 +32,7 @@
         </form>
       </header>
 
+      <!---LOREM IMPSUM TEXT AS PLACEHOLDER --> 
 
       <section class="about-us"> 
         <div class="about-container">
