--- a/code/contact.html
+++ b/code/contact.html
@@ -8,6 +8,9 @@
     <script src="https://kit.fontawesome.com/f193f020cd.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
     <title>WeLoveDiy - Contact</title>
+
+    <!---CONTACT PAGE --> 
+
 </head>
 <body>
 
@@ -31,6 +34,7 @@
         </form>
       </header>
 
+      <!---INFO AND FORM TO SEND A MESSAGE (IN REAL LIFE WOULD BE ABLE TO SEND THE FORM) --> 
 
       <section class="contact"> 
         <div class="contact-container">
