--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,9 @@
     <script src="https://kit.fontawesome.com/f193f020cd.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
     <title>We.love.DIY</title>
+
+    <!---HOMEPAGE --> 
+
     </head>
   <body>
 
@@ -101,6 +104,8 @@
         <p>Reprehenderit excepteur Lorem occaecat..</p>
       </div>
     </section>
+
+    <!---FOOTER WITH CONTACT --> 
 
 <footer>
   <div class="logo">We.love.diy</div>
