--- a/code/inspiration.html
+++ b/code/inspiration.html
@@ -17,7 +17,7 @@
           <i class="fa-solid fa-fill-drip"></i>
           </div>
         <div class="name">
-          <a href="inspiration.html">We.Love.DIY</a>
+          <a href="index.html">We.Love.DIY</a>
           </div>
         <ol class="menu">
           <li class="menu-item"><a href="inspiration.html">Home</a></li>
