--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,9 +30,9 @@
         <li class="menu-item"><a href="about.html">About</a></li>
       </ol>
       <form class="search-field">
-        <label for="search">Search</label>
         <input class="search-input" name="search" type="search" placeholder="Search...">
-        <button class="search-button" type="submit" name="search"><i class="fas fa-search"></i></button>
+        <label for="search-btn">Search</label>
+        <button class="search-button" type="submit" name="search-btn"><i class="fas fa-search"></i></button>
       </form>
     </header>
 
@@ -54,7 +53,7 @@
           <p class="hidden-paragraph"> 
              Eiusmod cillum adipisicing excepteur consequat laborum consectetur laboris. 
              Consectetur non sunt nulla ad quis nulla cillum amet ad deserunt nisi minim est.</p>
-            <a href="index.html"><button class="desktop-button">Download instructions in pdf</button></a>
+           <button class="desktop-button">Download instructions in pdf</button>
         </div>
       </div>
     </section>
