--- a/code/contact.html
+++ b/code/contact.html
@@ -28,10 +28,10 @@
           <li class="menu-item"><a href="about.html">About</a></li>
         </ol>
         <form class="search-field">
-          <label for="search">Search</label>
-          <input class="search-input" name="search" type="search" placeholder="Search...">
-          <button class="search-button" type="submit" name="search"><i class="fas fa-search"></i></button>
-        </form>
+            <input class="search-input" name="search" type="search" placeholder="Search...">
+            <label for="search-btn">Search</label>
+            <button class="search-button" type="submit" name="search-btn"><i class="fas fa-search"></i></button>
+          </form>
       </header>
 
       <!---INFO AND FORM TO SEND A MESSAGE (IN REAL LIFE WOULD BE ABLE TO SEND THE FORM) --> 
