--- a/code/inspiration.html
+++ b/code/inspiration.html
@@ -20,16 +20,16 @@
           <a href="index.html">We.Love.DIY</a>
           </div>
         <ol class="menu">
-          <li class="menu-item"><a href="inspiration.html">Home</a></li>
+          <li class="menu-item"><a href="index.html">Home</a></li>
           <li class="menu-item"><a href="inspiration.html">Inspiration</a></li> 
           <li class="menu-item"><a href="contact.html">Contact</a></li>
           <li class="menu-item"><a href="about.html">About</a></li>
         </ol>
         <form class="search-field">
-          <label for="search">Search</label>
-          <input class="search-input" name="search" type="search" placeholder="Search...">
-          <button class="search-button" type="submit" name="search"><i class="fas fa-search"></i></button>
-        </form>
+            <input class="search-input" name="search" type="search" placeholder="Search...">
+            <label for="search-btn">Search</label>
+            <button class="search-button" type="submit" name="search-btn"><i class="fas fa-search"></i></button>
+          </form>
       </header>
 
       <!---THE GRID WITH INSPO IMAGES (IN REAL LIFE CLICKABLE TO ARTICLES) --> 
