Big News Box styling

--- a/code/index.html
+++ b/code/index.html
@@ -27,8 +27,8 @@
     <!-- The big news content -->
     <section class="big-news">
       <div class="big-news-box">
-        <h1 class="big-news-title">Chemistry Nobel awarded for mirror-image molecules</h1>
-        <img class="big-news-image" src="https://images.unsplash.com/photo-1576086213369-97a306d36557?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"/>
+        <h2 class="big-news-title">Chemistry Nobel awarded for mirror-image molecules</h2>
+        <img class="big-news-image" "https://images.unsplash.com/photo-1576086213369-97a306d36557?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"/>
       </div>
     </section>
 
