Navigation Bar, Main Heading and Footer

--- a/code/index.html
+++ b/code/index.html
@@ -10,18 +10,22 @@
 
   <body>
     <header>
-      <div class="logo-container">
-        <img class="logo" src="" />
-      </div>
-      <h1 class="main-heading">Stockholm Times</h1>
       <div class="nav-container">
         <ul>
           <li>News</li>
           <li>Sports</li>
           <li>Tech</li>
+          <li>World</li>
           <li>Log In</li>
         </ul>
       </div>
+      <div class="logo-container">
+        <h1 class="main-heading one">Stockholm</h1>
+        <img class="logo" src="https://cdn.pixabay.com/photo/2016/01/16/08/04/aperture-1142967_960_720.png" />
+        <h1 class="main-heading two">Times</h1>
+      </div>
+      
+      
     </header>
 
     <!-- The big news content -->
@@ -92,6 +96,8 @@
           <h3 class="news-item-caption">Tech heading 4</h3>
       </section>
     </section>
+
+    <footer class ="footer">Copyright 2022 Stockholm Times</footer>
 
   </body>
 </html>
