design for mobile and tablet looks ok!

--- a/code/index.html
+++ b/code/index.html
@@ -32,6 +32,7 @@
       <div class="big-news-text">
         <h1 class="big-news-headline">Science Says: Lying In Sofa And Watching YouTube All Day Is Good, Actually</h1>
         <p class="big-news-paragraph">If you spend 5+ hours a day on your sofa watching random recommended videos on YouTube, you do in fact live a fulfilling and rewarding life and actually not the opposite. Scientists have said that and who are we to question them.</p>
+        <p class="read-more">(read more...)</p>
       </div>
     </section>
 
