links to assets

--- a/code/index.html
+++ b/code/index.html
@@ -12,13 +12,13 @@
     <header>
       <section class="navbar">
         <div class="navbar-logo-and-text">
-          <img src="../assets/logo.jpg" alt="logo" class="navbar-logo">
+          <img src="./assets/logo.jpg" alt="logo" class="navbar-logo">
           <a class="flex-child navbar-title" href="#">"EdNews"</a>
         </div>
         <nav class="flex-child navbar-links">
           <a class="navbar-link" href="#">news</a>
           <a class="navbar-link" href="#">archive</a>
-          <img src="../assets/logo.jpg" alt="logo" class="navbar-logo-tablet">
+          <img src="./assets/logo.jpg" alt="logo" class="navbar-logo-tablet">
           <a class="navbar-link" href="#">about</a>
           <a class="navbar-link" href="#">contact</a>
         </nav>
@@ -27,7 +27,7 @@
 
     <section class="big-news">
       <div class="big-news-image">
-        <img src="../assets/big-image.jpg" alt="stor bild">
+        <img src="./assets/big-image.jpg" alt="stor bild">
       </div>
       <div class="big-news-text">
         <h1 class="big-news-headline">Science Says: Lying In Sofa And Watching YouTube All Day Is Good, Actually</h1>
@@ -38,49 +38,49 @@
 
     <section class="news-grid">
       <div class="news-grid-item">
-        <img src="../assets/dog.jpg" alt="news-item-picture">
+        <img src="./assets/dog.jpg" alt="news-item-picture">
           <div class="news-grid-text">
           <p class="title">Dogs Are Cool</p>
           <p class="introduction">You heard it here first... They are cool</p>
         </div>
       </div>
       <div class="news-grid-item">
-        <img src="../assets/cat.jpg" alt="news-item-picture">
+        <img src="./assets/cat.jpg" alt="news-item-picture">
           <div class="news-grid-text">
           <p class="title">Cats Are Cool, Too</p>
           <p class="introduction">You gotta give it up for cats</p>
         </div>
       </div>
       <div class="news-grid-item">
-        <img src="../assets/owl.jpg" alt="news-item-picture">
+        <img src="./assets/owl.jpg" alt="news-item-picture">
           <div class="news-grid-text">
           <p class="title">Owls Are Cool But A Little Scary</p>
           <p class="introduction">They sound scary but they are not really</p>
         </div>
       </div>
       <div class="news-grid-item">
-        <img src="../assets/panda.jpg" alt="news-item-picture">
+        <img src="./assets/panda.jpg" alt="news-item-picture">
           <div class="news-grid-text">
           <p class="title">Pandas... You Guessed It; Also Cool</p>
           <p class="introduction">They're so lazy and clumsy but it's charming to be honest</p>
         </div>
       </div>
       <div class="news-grid-item">
-        <img src="../assets/dog.jpg" alt="news-item-picture">
+        <img src="./assets/dog.jpg" alt="news-item-picture">
           <div class="news-grid-text">
           <p class="title">Dogs Are Cool</p>
           <p class="introduction">You heard it here first... They are cool</p>
         </div>
       </div>
       <div class="news-grid-item">
-        <img src="../assets/cat.jpg" alt="news-item-picture">
+        <img src="./assets/cat.jpg" alt="news-item-picture">
           <div class="news-grid-text">
           <p class="title">Cats Are Cool, Too</p>
           <p class="introduction">You gotta give it up for cats</p>
         </div>
       </div>
       <div class="news-grid-item">
-        <img src="../assets/owl.jpg" alt="news-item-picture">
+        <img src="./assets/owl.jpg" alt="news-item-picture">
           <div class="news-grid-text">
           <p class="title">Owls Are Cool But A Little Scary</p>
           <p class="introduction">They sound scary but they are not really</p>
