--- a/code/index.html
+++ b/code/index.html
@@ -3,20 +3,62 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <section class="top-nav">
+        <div id="logo"><img src="./logo.svg" alt="logo"></div>
+        <div class="logo-text">Bim Bam Bum®</div>
+          <input id="menu-toggle" type="checkbox" />
+          <label class='menu-button-container' for="menu-toggle">
+          <div class='menu-button'></div>
+        </label>
+          <ul class="menu">
+        <li><a href="url">Link</a></li>
+        <li><a href="url">Link</a></li>
+        <li><a href="url">Link</a></li>
+        <li><a href="url">Link</a></li>
+          </ul>
+        </section>
+
     </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
+   <!-- The big news content // The big news content // The big news content // The big news content-->
+    <section class="big-news">      
+      <div class="title">Main news item headline</div>
+      <div class="description">Some descripiton text about the news with important description.</div>
+      <button class="btn"><a href="url">READ MORE</a></button>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <div class="news-container">
+      <section class="small-news">
+      <!-- All the individual small news // All the individual small news // All the individual small news // -->
+      <div class="news"><div id="inside_blue"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_orange"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_grey"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_blue"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_orange"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_grey"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_blue"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_orange"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_grey"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_blue"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_orange"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+      <div class="news"><div id="inside_grey"></div><h5>Main news item headline </h5><h6>Some descripiton</h6></div>
+   </section>
+  </div>
+ <!-- Footer // Footer // Footer // Footer // Footer // Footer // Footer // Footer // Footer // -->
+<footer>
+  <div class="footer-text_1">Bim Bam Bum /// and other stories</div>
+  <div class="footer-text_2">For new opportunities, plastic trees and golden smiles</div>
+  <div class="footer-text_3">BIG DADA®</div>
+</footer>
+
   </body>
 </html>
